fix(lyricova): disable grainy bg on Safari

--- a/packages/lyricova/src/components/public/listing/SingleEntry.module.scss
+++ b/packages/lyricova/src/components/public/listing/SingleEntry.module.scss
@@ -14,6 +14,11 @@
   background-image: url(https://grainy-gradients.vercel.app/noise.svg), linear-gradient($background-color, $background-color);
   background-blend-mode: soft-light;
 
+  // Disable grainy pattern on Safari mobile
+  @supports (-webkit-text-size-adjust:none) and (not (-ms-ime-align:auto)) and (not (-moz-appearance:none)) {
+    background-image: linear-gradient($background-color, $background-color);
+  }
+
   @media (hover: hover) {
     &:hover {
       background: url(https://grainy-gradients.vercel.app/noise.svg), var(--tags-gradient, linear-gradient($brand-color, $brand-color));
@@ -22,6 +27,11 @@
       --primary-text: #{$primary-text-on-brand};
       --secondary-text: #{$secondary-text-on-brand};
       --tag-color-override: #{$secondary-text-on-brand};
+
+      // Disable grainy pattern on Safari mobile
+      @supports (-webkit-text-size-adjust:none) and (not (-ms-ime-align:auto)) and (not (-moz-appearance:none)) {
+        background: var(--tags-gradient, linear-gradient($brand-color, $brand-color));
+      }
     }
   }
 }
